# scion-dqn-sim

./: README.md  WALKTHROUGH.md  pyproject.toml  requirements.txt  setup_brite.sh
configs/brite_templates/: as_barabasi.conf  as_barabasi2.conf  as_waxman.conf  hitopdown.conf
evaluation/: 01_generate_topology.py  02_run_beaconing.py  03_simulate_traffic.py  04_train_dqn.py  04_train_simple_dqn.py  05_evaluate_methods.py  06_generate_figures.py  _common.py  run_full_evaluation.py  run_full_evaluation_2.py  topology_defaults.yaml  visualize_topology.py
src/: cli.py
src/beacon/: beacon_sim_v2.py
src/harness/: algo_harness.py
src/path_services/: pathfinder.py  pathfinder_v2.py
src/rl/: dqn_agent_simple.py  environment_fixed_source.py  environment_realistic.py  environment_selective_probing.py
src/rl/evaluation/: environment.py
src/simulation/: __init__.py  evaluation_env.py  json_topology_adapter.py  path_builder.py  path_store.py
src/topology/: __init__.py  brite2scion_converter.py  brite_cfg_gen.py  top_down_generator.py  topology_geo.py
src/visualization/: __init__.py  topology_visualizer.py
tests/: conftest.py  test_baselines.py  test_beacon_adapter.py  test_beacon_simulator.py  test_brite_cross_isd_prune.py  test_common_helpers.py  test_dqn_agent_smoke.py  test_evaluation_env.py  test_path_builder_scion.py  test_path_services.py  test_simulation_core.py  test_topology.py  test_topology_geo.py  test_topology_json_plot.py  test_topology_unified_config.py  test_traffic_and_links.py
tests/fixtures/: topology_min_top_down.yaml
